--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -35,11 +35,10 @@
             </div>
         </div>
     </nav>
-    <header class="bg-dark py-5">
-        <div class="container px-4 px-lg-5 my-5">
+    <header class="bg-dark py-2">
+        <div class="container">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Shop in style</h1>
-                <p class="lead fw-normal text-white-50 mb-0">With this shop homepage template</p>
+                <h5 class="fw-bolder">ByteMarket</h5>
             </div>
         </div>
     </header>
@@ -65,11 +64,8 @@
             </div>
         </div>
     </section>
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">&copy; Your Website 2025</p>
-        </div>
-    </footer>
-</body>
 
+    <footer class="bg-dark text-white text-center py-2 fixed-bottom">Byte Market</footer>
+    
+</body>
 </html>
