--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -9,11 +9,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="../public/homeStyle.css">
+    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
 
 <body>
+    <header class="bg-dark py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-2 d-flex align-items-center text-white">
+                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                </div>
+                <div class="col-7">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
+                        <button class="btn btn-custom" type="submit">Buscar</button>
+                    </form>
+                </div>
+                <div class="col-3">
+                    <button class="btn btn-outline-dark btn-custom btn-custom-register" type="submit">
+                        <i class="bi-person-fill me-1"></i> Iniciar sesión / Registrarme
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#">Shop</a>
@@ -35,13 +59,6 @@
             </div>
         </div>
     </nav>
-    <header class="bg-dark py-2">
-        <div class="container">
-            <div class="text-center text-white">
-                <h5 class="fw-bolder">ByteMarket</h5>
-            </div>
-        </div>
-    </header>
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -66,6 +83,7 @@
     </section>
 
     <footer class="bg-dark text-white text-center py-2 fixed-bottom">Byte Market</footer>
-    
+
 </body>
+
 </html>
