--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -25,7 +25,7 @@
                 <div class="col-7">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-custom" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark btn-custom" type="submit">Buscar</button>
                     </form>
                 </div>
                 <div class="col-3">
