--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <footer class="bg-dark text-white text-center py-2 fixed-bottom">Byte Market</footer>
+    <footer class="bg-dark text-white text-center py-2 fixed-bottom">ByteMarket</footer>
 
 </body>
 
