--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -60,13 +60,14 @@
         </div>
     </nav>
     <header class="bg-dark py-2">
-        <div class="container">
+        <div class="container topProdContainer">
             <div class="text-white">
                 <h2 class="fw-bolder">Productos Destacados</h2>
             </div>
             <div class="topProducts gx-4 gx-lg-5">
-                <div class="col-3">
-                    <div class="card h-100">
+                
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
@@ -81,8 +82,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div class="card h-100">
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
@@ -97,8 +98,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div class="card h-100">
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
@@ -113,8 +114,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div class="card h-100">
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
@@ -129,8 +130,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <div class="card h-100">
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="topProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
