--- a/ByteMarket/public/homeStyle.css
+++ b/ByteMarket/public/homeStyle.css
@@ -4,8 +4,7 @@
 
 .loginButtons{
     display: flex;
-    flex-direction: row;
-    gap: 10px;
+    justify-content: center;
 }
 
 .topProdContainer{
