--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -33,10 +34,7 @@
 
                 <div class="col-3 loginButtons">
                     <button class="btn btn-outline-dark btn-custom" type="submit">
-                        <i class="bi-person-fill me-1"></i> Iniciar sesión
-                    </button>
-                    <button class="btn btn-outline-dark btn-custom" type="submit">
-                        <i class="bi-person-fill me-1"></i> Registrarse
+                        <i class="bi-person-fill me-1"></i> Iniciar sesión o registrarse
                     </button>
                 </div>
             </div>
