--- a/ByteMarket/views/barrausuario.html
+++ b/ByteMarket/views/barrausuario.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="bg-dark py-2">
-        <div class="container-fluid px-0">
+        <div class="container-fluid">
             <div class="row align-items-center">
                 
                 <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
@@ -33,7 +33,7 @@
     
                 <div class="col-2 d-flex justify-content-center">
                     <button class="btn btn-outline-dark btn-custom w-75 favourite" type="button">
-                        <i class="bi bi-heart me-2" style="color: orange;"></i>
+                        <i class="bi bi-heart me-2"></i>
                         FAVORITOS
                     </button>
                 </div>
