--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -28,7 +28,9 @@
                 <div class="col-7 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark btn-custom" type="submit">
+                            <i class="bi bi-search" style="color: white;"></i>
+                        </button>
                     </form>
                 </div>
 
@@ -43,16 +45,16 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#">Shop</a>
+        <div class="container px-4 px-lg-5 navbarContent">
+            <a class="navbar-brand" href="#">Inicio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Móviles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Ordenadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Auriculares</a></li>
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
