--- a/ByteMarket/public/productStyle.css
+++ b/ByteMarket/public/productStyle.css
@@ -3,40 +3,10 @@
     height: 70px;
 }
 
-.btn-custom {
-    background-color: #d35400; 
-    color: #ffffff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.btn-custom:hover {
-    background-color: #823400;
-    color: white;
-}
-
-.btn-custom-register {
-    margin-left: 50px;
-
-}
-
-.favourite {
-    color:white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 17px;
-}
-
 .sell {
     color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 17px;
-}
-
-.header-logo {
-            padding-left: 50px;
-        }
-
-.header-profile{
-    padding-right: 80px;
 }
 
 .scrolling-wrapper {
@@ -44,6 +14,32 @@
     overflow-x: auto;
     gap: 10px;
     padding: 10px 0;
+}
+
+/* Personalizar la barra de desplazamiento */
+.scrolling-wrapper::-webkit-scrollbar {
+    height: 10px;
+}
+
+.scrolling-wrapper::-webkit-scrollbar-button{
+    background: transparent;
+}
+
+.scrolling-wrapper::-webkit-scrollbar-corner{
+    background: transparent;
+}
+
+.scrolling-wrapper::-webkit-scrollbar-track {
+    background: transparent; /* Color del fondo de la barra de desplazamiento */
+}
+
+.scrolling-wrapper::-webkit-scrollbar-thumb {
+    background: #777; /* Color de la barra de desplazamiento */
+    border-radius: 10px;
+}
+
+.scrolling-wrapper::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color de la barra de desplazamiento al pasar el ratón por encima */
 }
 
 .card {
@@ -74,4 +70,151 @@ iframe {
     width: 100%;
     height: 450px; /* Puedes ajustar la altura si lo necesitas */
     border: none;
+}
+
+/*SECCION DE CSS PARA LA CABECERA CON EL USUARIO REGISTRAD0*/
+
+.headerContainer{
+    margin-right: 0px;
+}
+
+.btn-custom {
+    background-color: #d35400; 
+    color: #ffffff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.btn-custom:hover {
+    background-color: #823400;
+    color: white;
+}
+
+.header-logo {
+    padding-left: 50px;
+}
+
+.header-profile{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 10px;
+    max-width: fit-content;
+    border-radius: 10px;
+}
+
+.header-profile:hover{
+    cursor: pointer;
+    background:black;
+}
+
+.profilePic{
+    border-radius: 50%;
+    width: 50px;
+    margin: 3px;
+}
+
+.headerButtons{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.headerButton {
+    color:white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 17px;
+}
+
+.fav-sellText{
+    margin-left: 5px;
+}
+
+/*RESPONSIVE*/
+@media (max-width: 1250px){   
+    .header-logo{
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 15px;
+        padding-left: 0px;
+    }
+
+    .searchContainer{
+        width: 80%;
+        margin-bottom: 15px;
+    }
+
+    .headerContainer{
+        justify-content: center;
+    }
+
+    .headerButtons{
+        width: 50%;
+        gap: 5px;
+    }
+
+    .headerButton{
+        width: 100%;
+    }
+
+    .header-profile{
+        width: 50%;
+    }
+}
+
+@media (max-width: 800px){   
+    .header-logo{
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 15px;
+    }
+
+    .searchContainer{
+        width: 80%;
+        margin-bottom: 15px;
+        margin-left: 0px;
+        justify-content: center;
+    }
+
+    .headerContainer{
+        justify-content: center;
+    }
+}
+
+@media (max-width: 615px){   
+    .fav-sellText{
+        display: none;
+    }
+
+    .header-profile{
+        width: 60%;
+    }
+
+    .headerButtons{
+        width: 40%;
+    }
+    
+}
+
+/*FIN DE SECCION DE CSS PARA LA CABECERA CON EL USUARIO REGISTRAD0*/
+
+.otherProdContainer{
+    padding-left: 3%;
+    padding-right: 3%;
+    max-width: 100%;
+}
+
+.otherProducts{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.otherProduct{ 
+    margin-bottom: 20px;
+    max-width: 25%;
+    min-width: 175px;
 }
