--- a/ByteMarket/views/barrausuario.html
+++ b/ByteMarket/views/barrausuario.html
@@ -25,30 +25,39 @@
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </div>
     
-                <div class="col-5">
+                <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark btn-custom" type="submit">
+                            <i class="bi bi-search" style="color: white;"></i>
+                        </button>
                     </form>
                 </div>
     
-                <div class="col-2 d-flex justify-content-center">
-                    <button class="btn btn-outline-dark btn-custom w-75 favourite" type="button">
-                        <i class="bi bi-heart me-2"></i>
-                        FAVORITOS
-                    </button>
-                </div>
-                
-                <div class="col-2 d-flex justify-content-center">
-                    <button class="btn btn-outline-dark btn-custom w-75 sell" type="button">
-                        <i class="bi me-2"></i>
-                        + VENDER
-                    </button>
+                <div class="col-3 m-0 justify-content-center headerButtons">
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-heart-fill" style="color: white;"></i>
+                            <text class="fav-sellText">Favoritos</text>
+                        </button>
+                    </div>
+                    
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-plus-lg"></i>
+                            <text class="fav-sellText">Vender</text>
+                        </button>
+                    </div>
                 </div>
     
-                <div class="col-1 d-flex justify-content-center align-items-center header-profile"> <!-- Añadido clase header-profile -->
-                    <img src="../public/perfil.png" alt="Logo" width="55" height="55">
-                </div>                
+                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
+                    <div> 
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                    </div>  
+                    <div>
+                        <p class="text-white fw-bolder mb-0">Usuario</p>
+                    </div>
+                </div>              
             </div>
         </div>
     </header>
