--- a/ByteMarket/views/product.html
+++ b/ByteMarket/views/product.html
@@ -4,51 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../public/ProductStyle.css">
+    <link rel="stylesheet" href="../public/productStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
 
 <body>
     <header class="bg-dark py-2">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-
-                <div class="col-2 d-flex align-items-center text-white header-logo">
+        <div class="container-fluid px-0">
+            <div class="row align-items-center headerContainer">
+                
+                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
                     <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </div>
-
-                <div class="col-5">
+    
+                <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark btn-custom" type="submit">
+                            <i class="bi bi-search" style="color: white;"></i>
+                        </button>
                     </form>
                 </div>
-
-                <div class="col-2 d-flex justify-content-center">
-                    <button class="btn btn-outline-dark btn-custom w-75 favourite" type="button">
-                        <i class="bi bi-heart me-2"></i>
-                        FAVORITOS
-                    </button>
+    
+                <div class="col-3 m-0 justify-content-center headerButtons">
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-heart-fill" style="color: white;"></i>
+                            <text class="fav-sellText">Favoritos</text>
+                        </button>
+                    </div>
+                    
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-plus-lg"></i>
+                            <text class="fav-sellText">Vender</text>
+                        </button>
+                    </div>
                 </div>
-
-                <div class="col-2 d-flex justify-content-center">
-                    <button class="btn btn-outline-dark btn-custom w-75 sell" type="button">
-                        <i class="bi me-2"></i>
-                        + VENDER
-                    </button>
-                </div>
-
-                <div class="col-1 d-flex justify-content-center align-items-center header-profile">
-                    <img src="../public/perfil.png" alt="Logo" width="55" height="55">
-                </div>
+    
+                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
+                    <div> 
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                    </div>  
+                    <div>
+                        <p class="text-white fw-bolder mb-0">Usuario</p>
+                    </div>
+                </div>              
             </div>
         </div>
     </header>
@@ -67,8 +76,8 @@
                 <p>Descripción del producto. Aquí se detallan las características, el estado y cualquier otra
                     información relevante.</p>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-custom">Contactar con el vendedor</button>
-                    <button class="btn btn-custom">Añadir a favoritos</button>
+                    <button class="btn btn-custom"><i class="bi bi-chat-fill m-2"></i>Contactar con el vendedor</button>
+                    <button class="btn btn-custom"><i class="bi bi-heart m-2" style="color: white;"></i>Añadir a favoritos</button>
                 </div>
             </div>
         </div>
