--- a/ByteMarket/views/profile.html
+++ b/ByteMarket/views/profile.html
@@ -38,14 +38,14 @@
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
                             <i class="bi bi-heart-fill" style="color: white;"></i>
-                            <text class="fav-sellText">FAVORITOS</text>
+                            <text class="fav-sellText">Favoritos</text>
                         </button>
                     </div>
                     
                     <div>
                         <button class="btn btn-outline-dark btn-custom headerButton" type="button">
                             <i class="bi bi-plus-lg"></i>
-                            <text class="fav-sellText">VENDER</text>
+                            <text class="fav-sellText">Vender</text>
                         </button>
                     </div>
                 </div>
