--- a/ByteMarket/views/editProfile.html
+++ b/ByteMarket/views/editProfile.html
@@ -29,7 +29,7 @@
                 <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">
+                        <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
                             <i class="bi bi-search"></i>
                         </button>
                     </form>
@@ -80,23 +80,23 @@
             <form>
                 <div class="mb-3 text-start">
                     <label class="form-label">Nombre</label>
-                    <input type="text" class="form-control" value="Usuario Ejemplo">
+                    <input type="text" class="form-control" value="Usuario Ejemplo" title="Usuario">
                 </div>
                 <div class="mb-3 text-start">
                     <label class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" value="usuario@email.com">
+                    <input type="email" class="form-control" value="usuario@email.com" title="Correo">
                 </div>
                 <div class="mb-3 text-start">
                     <label class="form-label">Ubicación</label>
-                    <input type="text" class="form-control" value="Madrid, España">
+                    <input type="text" class="form-control" value="Madrid, España" title="Ubicacion">
                 </div>
                 <div class="mb-3 text-start">
                     <label class="form-label">Nueva Contraseña</label>
-                    <input type="password" class="form-control">
+                    <input type="password" class="form-control" title="Contraseña">
                 </div>
                 <div class="mb-3 text-start">
                     <label class="form-label">Confirmar Contraseña</label>
-                    <input type="password" class="form-control">
+                    <input type="password" class="form-control" title="Contraseña">
                 </div>
                 <button type="submit" class="btn btn-custom w-100">Guardar Cambios</button>
                 <a href="#" class="btn-delete">Eliminar cuenta</a>
