--- a/ByteMarket/views/productDetails.html
+++ b/ByteMarket/views/productDetails.html
@@ -28,9 +28,10 @@
                 <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">
+                        <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
                             <i class="bi bi-search" style="color: white;"></i>
                         </button>
+                        
                     </form>
                 </div>
     
