Updated the nav bar with function "chat" in all user pages and the screen of history sales and purchase. New screens: chat and administrator screen of reports.

--- a/ByteMarket/public/profileStyle.css
+++ b/ByteMarket/public/profileStyle.css
@@ -40,6 +40,13 @@
     margin: 3px;
 }
 
+.profilePicChat{
+    border-radius: 50%;
+    width: 8%;
+    height: 8%;
+    margin: 3px;
+}
+
 .headerButtons{
     display: flex;
     justify-content: center;
