--- a/ByteMarket/views/editProfile.html
+++ b/ByteMarket/views/editProfile.html
@@ -49,6 +49,13 @@
                             <text class="fav-sellText">Vender</text>
                         </button>
                     </div>
+
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-chat-dots"></i>
+                            <text class="fav-sellText">Chat</text>
+                        </button>
+                    </div>
                 </div>
 
                 <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
