--- a/ByteMarket/views/profile.html
+++ b/ByteMarket/views/profile.html
@@ -48,6 +48,13 @@
                             <text class="fav-sellText">Vender</text>
                         </button>
                     </div>
+
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-chat-dots"></i>
+                            <text class="fav-sellText">Chat</text>
+                        </button>
+                    </div>
                 </div>
     
                 <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
@@ -88,7 +95,7 @@
     <section class="py-4">
         <div class="container otherProdContainer">
             <div class="">
-                <h2 class="fw-bolder mb-3">Productos Favoritos</h2>
+                <h2 class="fw-bolder mb-3">Productos favoritos</h2>
             </div>
             <div class="row otherProducts">
                 <div class="otherProduct col-3">
@@ -101,16 +108,8 @@
                                 $40.00 - $80.00
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="otherProduct col-3">
-                    <div class="productCard card h-100">
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                            alt="Product Image" />
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <h5 class="fw-bolder">Product Name</h5>
-                                $40.00 - $80.00
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -125,16 +124,8 @@
                                 $40.00 - $80.00
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="otherProduct col-3">
-                    <div class="productCard card h-100">
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                            alt="Product Image" />
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <h5 class="fw-bolder">Product Name</h5>
-                                $40.00 - $80.00
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -149,16 +140,8 @@
                                 $40.00 - $80.00
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="otherProduct col-3">
-                    <div class="productCard card h-100">
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                            alt="Product Image" />
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <h5 class="fw-bolder">Product Name</h5>
-                                $40.00 - $80.00
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -173,6 +156,10 @@
                                 $40.00 - $80.00
                             </div>
                         </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="otherProduct col-3">
@@ -183,6 +170,58 @@
                             <div class="text-center">
                                 <h5 class="fw-bolder">Product Name</h5>
                                 $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
                             </div>
                         </div>
                     </div>
