--- a/ByteMarket/views/historySales.html
+++ b/ByteMarket/views/historySales.html
@@ -4,69 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../public/homeStyle.css">
+    <link rel="stylesheet" href="../public/profileStyle.css">
     <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
     <title>ByteMarket</title>
 </head>
 
 <body>
-    <header class="bg-dark py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-2 d-flex align-items-center text-white">
+    <header class="bg-dark py-2">
+        <div class="container-fluid px-0">
+            <div class="row align-items-center headerContainer">
+                
+                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
                     <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                     <h5 class="fw-bolder mb-0">ByteMarket</h5>
                 </div>
-                <div class="col-7">
+    
+                <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Buscar">
-                        <button class="btn btn-outline-dark btn-custom" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark btn-custom" type="submit" title="Buscar">
+                            <i class="bi bi-search" style="color: white;"></i>
+                        </button>
                     </form>
                 </div>
+    
+                <div class="col-3 m-0 justify-content-center headerButtons">
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-heart-fill" style="color: white;"></i>
+                            <text class="fav-sellText">Favoritos</text>
+                        </button>
+                    </div>
+                    
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-plus-lg"></i>
+                            <text class="fav-sellText">Vender</text>
+                        </button>
+                    </div>
+
+                    <div>
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                            <i class="bi bi-chat-dots"></i>
+                            <text class="fav-sellText">Chat</text>
+                        </button>
+                    </div>
+                </div>
+    
+                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
+                    <div> 
+                        <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
+                    </div>  
+                    <div>
+                        <p class="text-white fw-bolder mb-0">Usuario</p>
+                    </div>
+                </div>              
             </div>
         </div>
     </header>
 
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#">Tienda</a>
+            <a class="navbar-brand" href="#">Perfil</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sobre nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Favoritos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Mis productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Últimas compras</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Últimas ventas</a></li>
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
-                        Carrito <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                     </button>
                 </form>
             </div>
         </div>
     </nav>
-    <header class="bg-dark py-2">
-        <div class="container">
-            <div class="text-white">
-                <h2 class="fw-bolder">Historial de ventas</h2>
+
+    <section class="py-4">
+        <div class="container otherProdContainer">
+            <div class="">
+                <h2 class="fw-bolder mb-3">Historial de ventas</h2>
             </div>
-            <div class="topProducts gx-4 gx-lg-5">
-                <div class="col-md-3">
-                    <div class="card h-100">
+            <div class="row otherProducts">
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $30.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -75,14 +114,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100">
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $25.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -91,14 +130,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100">
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $10.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -107,14 +146,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100">
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $90.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -123,14 +162,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100">
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $90.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -138,15 +177,15 @@
                             </div>
                         </div>
                     </div>
-                </div> 
-                <div class="col-md-3">
-                    <div class="card h-100">
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
                         <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
                             alt="Product Image" />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">Producto</h5>
-                                $90.00
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -154,11 +193,44 @@
                             </div>
                         </div>
                     </div>
-                </div>            
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="otherProduct col-3">
+                    <div class="productCard card h-100">
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                            alt="Product Image" />
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <h5 class="fw-bolder">Product Name</h5>
+                                $40.00 - $80.00
+                            </div>
+                        </div>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Detalles</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </header>
-    <footer class="bg-dark text-white text-center py-2 fixed-bottom">Byte Market</footer>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-2">ByteMarket</footer>
 
 </body>
 
