profile changes, chat image product and favorite products updates

--- a/ByteMarket/views/chat.html
+++ b/ByteMarket/views/chat.html
@@ -78,12 +78,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 </ul>
-                <form class="d-flex">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </form>
             </div>
         </div>
     </nav>
@@ -93,24 +87,34 @@
             <div class="col-md-4 border-end" style="height: 80vh; overflow-y: auto;">
                 <h5 class="p-3 border-bottom">Chat</h5>
                 <ul class="list-group">
-                    <li class="list-group-item">
-                        <a href="#" class="text-decoration-none">Dudas sobre Torre MSI</a>
-                        <p class="text-muted mb-0 small">Último mensaje: hace 2 horas</p>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="../public/perfil.png" alt="Torre MSI" class="me-3" width="40" height="40">
+                        <div>
+                            <a href="#" class="text-decoration-none">Torre MSI</a>
+                            <p class="text-muted mb-0 small">Último mensaje: hace 2 horas</p>
+                        </div>
                     </li>
-                    <li class="list-group-item">
-                        <a href="#" class="text-decoration-none">Colores rgb ratón</a>
-                        <p class="text-muted mb-0 small">Último mensaje: ayer</p>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="../public/perfil.png" alt="Ratón Mars Gaming" class="me-3" width="40" height="40">
+                        <div>
+                            <a href="#" class="text-decoration-none">Ratón Mars Gaming</a>
+                            <p class="text-muted mb-0 small">Último mensaje: ayer</p>
+                        </div>
                     </li>
-                    <li class="list-group-item">
-                        <a href="#" class="text-decoration-none">Dudas sobre unos auriculares</a>
-                        <p class="text-muted mb-0 small">Último mensaje: hace 5 días</p>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="../public/perfil.png" alt="Auriculares CoolerMaster" class="me-3" width="40" height="40">
+                        <div>
+                            <a href="#" class="text-decoration-none">Auriculares CoolerMaster</a>
+                            <p class="text-muted mb-0 small">Último mensaje: hace 5 días</p>
+                        </div>
                     </li>
                 </ul>
             </div>
+            
 
             <div class="col-md-8 d-flex flex-column" style="height: 80vh;">
                 <div class="p-3 border-bottom">
-                    <h5>Dudas sobre Torre MSI</h5>
+                    <h5>Torre MSI</h5>
                     <p class="text-muted mb-0">10/02/2025</p>
                 </div>
 
