--- a/ByteMarket/views/adminScreen.html
+++ b/ByteMarket/views/adminScreen.html
@@ -21,10 +21,12 @@
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
                 
-                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
-                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
-                </div>
+                <a href="home.html" class="col-2 text-decoration-none p-0">
+                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </div>
+                </a>
     
                 <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
