--- a/ByteMarket/views/historyPurchase.html
+++ b/ByteMarket/views/historyPurchase.html
@@ -21,10 +21,12 @@
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
                 
-                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
-                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
-                </div>
+                <a href="home.html" class="col-2 text-decoration-none p-0">
+                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </div>
+                </a>
     
                 <div class="col-5 searchContainer">
                     <form class="d-flex" role="search">
@@ -37,58 +39,53 @@
     
                 <div class="col-3 m-0 justify-content-center headerButtons">
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <a href="favorite.html" class="btn btn-outline-dark btn-custom headerButton" role="button">
                             <i class="bi bi-heart-fill" style="color: white;"></i>
                             <text class="fav-sellText">Favoritos</text>
-                        </button>
+                        </a>
                     </div>
                     
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <a href="newProductForm.html" class="btn btn-outline-dark btn-custom headerButton" role="button">
                             <i class="bi bi-plus-lg"></i>
                             <text class="fav-sellText">Vender</text>
-                        </button>
+                        </a>
                     </div>
 
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button">
+                        <a href="chat.html" class="btn btn-outline-dark btn-custom headerButton" role="button">
                             <i class="bi bi-chat-fill"></i>
                             <text class="fav-sellText">Chats</text>
-                        </button>
+                        </a>
                     </div>
                 </div>
     
-                <div class="col-2 header-profile" height="55"> <!-- Añadido clase header-profile -->
-                    <div> 
+                <a href="profile.html" class="col-2 text-decoration-none header-profile">
+                    <div>
                         <img class="profilePic" src="../public/defaul-pfp.jpg" alt="Logo">
-                    </div>  
+                    </div>
                     <div>
                         <p class="text-white fw-bolder mb-0">Usuario</p>
                     </div>
-                </div>              
+                </a>
+
             </div>
         </div>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#">Perfil</a>
+            <a class="navbar-brand" href="profile.html">Perfil</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link" href="#">Favoritos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Mis productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Últimas compras</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Últimas ventas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorite.html">Favoritos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Reseñas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="historyPurchase.html">Últimas compras</a></li>
+                    <li class="nav-item"><a class="nav-link" href="historySales.html">Últimas ventas</a></li>
                 </ul>
-                <form class="d-flex">
-                    <button class="btn btn-outline-dark" type="submit">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
-                </form>
             </div>
         </div>
     </nav>
