--- a/ByteMarket/views/home.html
+++ b/ByteMarket/views/home.html
@@ -20,10 +20,12 @@
         <div class="container-fluid px-0">
             <div class="row align-items-center headerContainer">
 
-                <div class="col-2 d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
-                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
-                </div>
+                <a href="home.html" class="col-2 text-decoration-none p-0">
+                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </div>
+                </a>
 
                 <div class="col-7 searchContainer">
                     <form class="d-flex" role="search">
@@ -35,9 +37,9 @@
                 </div>
 
                 <div class="col-3 loginButtons">
-                    <button class="btn btn-outline-dark btn-custom" type="submit">
+                    <a href="login.html" class="btn btn-outline-dark btn-custom headerButton" role="button">
                         <i class="bi-person-fill me-1"></i> Iniciar sesión o registrarse
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
