--- a/ByteMarket/views/singIn.html
+++ b/ByteMarket/views/singIn.html
@@ -20,10 +20,12 @@
     <header class="bg-dark py-2">
         <div class="container-fluid px-0">
             <div class="align-items-center headerContainer">
-                <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
-                    <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
-                    <h5 class="fw-bolder mb-0">ByteMarket</h5>
-                </div>
+                <a href="home.html" class="col-2 text-decoration-none p-0">
+                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                        <img src="../public/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
+                        <h5 class="fw-bolder mb-0">ByteMarket</h5>
+                    </div>
+                </a>
             </div>
         </div>
     </header>
